# zstr

./: .clang-format  CMakeLists.txt  CMakePresets.json  README.md  mod.cppm
.github/workflows/: cmake.yml
examples/: test-strict_fstream.cpp  zc.cpp  zpipe.cpp  ztxtpipe.cpp
